# Wave

./: .easignore  .gitignore  .tmp-research-output.json  .tmp-research-output.md  .tmp-research-query.md  AGENTS.md  HANDOFF.md  LICENSE  NOTICE  PRD.md  README.md  build_llamacpp.sh  package-lock.json  package.json  skills-lock.json  submission_requirements.md  train.sh
client/: README.md  package.json  (+2 more)
models/: README.md  SYNTHETIC_DATA.md  SYNTHETIC_DATASET_GENERATION.md  bench_gguf_wave_prompts.py  cast_fp16_streaming.py  cast_rmsnorm_fp32.py  diagnose_merged_base.py  export_text_onnx.py  finish_export.py  fuse_rmsnorm.py  inspect_decoder.py  inspect_gbq.py  inspect_task_file.py  merge_and_probe.sh  merge_lora_peft.py  pyproject.toml  quantize_gather.py  restage_decoder.py  rewrite_pow_to_mul.py  run_v6_train_probe.sh  setup.sh  smoke_run.sh  train.sh  try_fuse_decoder.py  try_fuse_decoder_v2.py
models/datasets/: lora-wave-session-toolcall-v4-smokeA.jsonl  lora-wave-session-toolcall-v4-smokeB.jsonl
models/finetune/: GEMMA_TRAINING_GUIDE_external_jtmuller5.md  build_smoke_datasets.py  check_adapter.py  check_ending_v6.py  check_intermediate_v6.py  check_messages.py  check_render.py  check_templates.py  check_tokens.py  inspect_prompt.py  inspect_v6_intermediate.py  inspect_v6_render.py  probe_base_gemma_native.py  probe_native_format.py  probe_notools.py  probe_rewritten_task.py  probe_temperature.py  test_regression_phase_reflection.py  test_tool_calling.py  test_tool_calling_stability.py  train_wave_session_lora.py  transform_to_native_tools.py  transform_to_native_tools_v4.py  transform_to_native_tools_v5.py  transform_to_native_tools_v6.py
models/successful_runs/local_final/: generation-eval-progress.jsonl
(+309 files in other folders)
